OpenLDAP 2.3 Change Log

OpenLDAP 2.3.28 Engineering
	Fixed libldap ldap.conf max line length (ITS#4669)
	Fixed liblutil LDIF CR/LF parsing bug (ITS#4635)
	Fixed librewrite LDAP map parsing bug
	Fixed librewrite map double free bug
	Added ldapsearch bad filter pattern check (ITS#4647)
	Fixed slapd global access controls initialization (ITS#4654)
	Fixed slapd setting c_sasl_bindop only on SASL binds
	Fixed slapd return code not being propagated (ITS#4565)
	Fixed slapd integerBitAndMatch (ITS#4672)
	Fixed slapd syncrepl modrdn new superior (ITS#4695)
	Fixed slapd-ldap retry with idassert (ITS#4686)
	Fixed slapd-monitor locking with scope "subordinate" (ITS#4668)
	Fixed slapd-perl deletes (ITS#2612)
	Fixed slapd-perl backend initialization (ITS#4358)
	Fixed slapd-perl finding interpreter inside a thread (ITS#4358)
	Fixed slapo-ppolicy pwdChangedTime behavior (ITS#4692)
	Fixed slapo-translucent ldapmodify crash (ITS#4673)
	Documentation
		Updated ldapsearch(1) options (ITS#4371,4526,4647)
		Fixed slapd.access(5) non-optional dn= error (ITS#4522)

OpenLDAP 2.3.27 Release
	Fixed libldap dangling pointer issue (previous fix was broken) (ITS#4405)

OpenLDAP 2.3.26 Release
	Fixed libldap dnssrv bug with "not present" positive statement (ITS#4610)
	Fixed libldap dangling pointer issue (ITS#4405)
	Fixed slapd incorrect rebuilding of replica URI (ITS#4633)
	Fixed slapd DN X.509 normalization crash (ITS#4644)
	Fixed slapd-monitor operations order via callbacks (ITS#4631)
	Fixed slapd-sql undefined filter handling (ITS#4604)
	Fixed slapo-accesslog purge task during shutdown
	Fixed slapo-ppolicy handling of default policy (ITS#4634)
	Fixed slapo-ppolicy logging verbosity when using default policy
	Fixed slapo-syncprov incomplete sync on restart issues (ITS#4622)

OpenLDAP 2.3.25 Release
	Fixed liblber ber_bvreplace_x argument checks
	Add libldap_r TLS concurrency workaround (ITS#4583)
	Fixed liblutil password length bug
	Add slapd glue/subordinate conflict check (ITS#4614)