@@ -1,4 +1,5 @@
 OpenLDAP 2.3 Change Log
+	Fixed slapd-meta DN massage error code handling (ITS#4711)
 
 OpenLDAP 2.3.28 Engineering
 	Fixed libldap ldap.conf max line length (ITS#4669)
